Adjusted to new cryptolib API