@@ -7,8 +7,12 @@ import com.google.common.jimfs.Jimfs;
 import org.cryptomator.cryptofs.migration.api.Migrator;
 import org.cryptomator.cryptofs.mocks.NullSecureRandom;
 import org.cryptomator.cryptolib.Cryptors;
+import org.cryptomator.cryptolib.api.CryptoException;
 import org.cryptomator.cryptolib.api.CryptorProvider;
-import org.cryptomator.cryptolib.api.KeyFile;
+import org.cryptomator.cryptolib.api.Masterkey;
+import org.cryptomator.cryptolib.common.MasterkeyFile;
+import org.hamcrest.CoreMatchers;
+import org.hamcrest.MatcherAssert;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Assumptions;
@@ -16,9 +20,11 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.SecureRandom;
 
 public class Version8MigratorTest {
 
@@ -26,11 +32,10 @@ public class Version8MigratorTest {
 	private Path pathToVault;
 	private Path masterkeyFile;
 	private Path vaultConfigFile;
-	private CryptorProvider cryptorProvider;
+	private SecureRandom csprng = NullSecureRandom.INSTANCE;
 
 	@BeforeEach
 	public void setup() throws IOException {
-		cryptorProvider = Cryptors.version1(NullSecureRandom.INSTANCE);
 		fs = Jimfs.newFileSystem(Configuration.unix());
 		pathToVault = fs.getPath("/vaultDir");
 		masterkeyFile = pathToVault.resolve("masterkey.cryptomator");
@@ -44,17 +49,17 @@ public class Version8MigratorTest {
 	}
 
 	@Test
-	public void testMigrate() throws IOException {
-		KeyFile beforeMigration = cryptorProvider.createNew().writeKeysToMasterkeyFile("topsecret", 7);
-		Assumptions.assumeTrue(beforeMigration.getVersion() == 7);
+	public void testMigrate() throws CryptoException, IOException {
+		Masterkey masterkey = Masterkey.createNew(csprng);
+		byte[] unmigrated = MasterkeyFile.lock(masterkey, "topsecret", new byte[0], 7, csprng);
 		Assumptions.assumeFalse(Files.exists(vaultConfigFile));
-		Files.write(masterkeyFile, beforeMigration.serialize());
+		Files.write(masterkeyFile, unmigrated);
 
-		Migrator migrator = new Version8Migrator(cryptorProvider);
+		Migrator migrator = new Version8Migrator(csprng);
 		migrator.migrate(pathToVault, "vault.cryptomator", "masterkey.cryptomator", "topsecret");
 
-		KeyFile afterMigration = KeyFile.parse(Files.readAllBytes(masterkeyFile));
-		Assertions.assertEquals(999, afterMigration.getVersion());
+		String migrated = Files.readString(masterkeyFile, StandardCharsets.UTF_8);
+		MatcherAssert.assertThat(migrated, CoreMatchers.containsString("\"version\": 999"));
 		Assertions.assertTrue(Files.exists(vaultConfigFile));
 		DecodedJWT token = JWT.decode(Files.readString(vaultConfigFile));
 		Assertions.assertNotNull(token.getId());
